[package]
authors = ["Sturdy <sturdy@apollo.farm>"]
edition = "2021"
name = "apollo-vault"
version = "0.1.0"

[features]
default = ["redeem"]
redeem = []
lockup = []
force-unlock = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
apollo-cw-asset = { workspace = true }
cw-controllers = { workspace = true }
cw-dex = { workspace = true }
cw-dex-router = { workspace = true }
cw-vault-token = { workspace = true }
cw-vault-standard = { workspace = true }
derive_builder = { workspace = true }
thiserror = { workspace = true }
cw20-base = { workspace = true }
apollo-utils = { workspace = true }
base-vault = { workspace = true }
cw-utils = { workspace = true }
liquidity-helper = { workspace = true }


[dev-dependencies]
test-case = "2.2.2"
