[package]
authors = ["Sturdy <sturdy@apollo.farm>"]
edition = "2021"
name = "base-vault"
version = "0.1.0"

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
serde = { workspace = true }
apollo-cw-asset = { workspace = true }
cw-vault-token = { workspace = true }

